# solar-system-sim

./: .gitmodules  Cargo.toml  main.py
assets/planets/: physical_constants.json  planets.json
src/: camera.rs  camera_plugin.rs  debug_information_plugin.rs  labels.rs  main.rs  physical_constant_models.rs  planet_components.rs  planet_entity.rs  planet_models.rs  planets.rs  solar_system_plugin.rs
