[package]
name = "solar_system_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.94"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 2

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
